<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    android:fillViewport="true">
    //child

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/quizBlockStyle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1_text"
                style="@style/quizTextStyle"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/taiwanbank"
                android:adjustViewBounds="false"
                style="@style/imgViewStyle"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/ans1option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ans1option1"
                    style="@style/radioBtnStyle"/>

                <RadioButton
                    android:id="@+id/ans1option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ans1option2"
                    style="@style/radioBtnStyle"/>

                <RadioButton
                    android:id="@+id/ans1option3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ans1option3"
                    style="@style/radioBtnStyle"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/quizBlockStyle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2_text"
                style="@style/quizTextStyle"
                />

            <ImageView
                style="@style/imgViewStyle"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:adjustViewBounds="false"
                android:src="@drawable/pureyouth" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/ans2option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ans1option1"
                    style="@style/radioBtnStyle"/>

                <RadioButton
                    android:id="@+id/ans2option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ans1option2"
                    style="@style/radioBtnStyle"/>

                <RadioButton
                    android:id="@+id/ans2option3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ans1option3"
                    style="@style/radioBtnStyle"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/quizBlockStyle"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3_text"
                style="@style/quizTextStyle"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/yulon"
                android:adjustViewBounds="false"
                style="@style/imgViewStyle"
                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/ans3option1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ans1option1"
                    style="@style/radioBtnStyle"/>

                <RadioButton
                    android:id="@+id/ans3option2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ans1option2"
                    style="@style/radioBtnStyle"/>

                <RadioButton
                    android:id="@+id/ans3option3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ans1option3"
                    style="@style/radioBtnStyle"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/quizBlockStyle"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4_text"
                style="@style/quizTextStyle"
                />

            <ImageView
                style="@style/imgViewStyle"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:adjustViewBounds="true"
                android:src="@drawable/player1" />

            <EditText
                android:id="@+id/q4_edit_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Type here"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/showDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="submit"
                />
        </LinearLayout>

    </LinearLayout>


</ScrollView>
